Fix CS/Findbugs violations and enable enforcement
Change-Id: I9e0c528bd694d858e726749fa10a97f3e3199d94
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>